--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
-    "leaflet": "^1.2.0"
+    "leaflet": "^1.2.0",
+    "md5": "^2.2.1"
   }
 }
